--- a/src/BlueBear/EAVModelBundle/Resources/config/services.yml
+++ b/src/BlueBear/EAVModelBundle/Resources/config/services.yml
@@ -5,4 +5,5 @@ services:
     bluebear.generator.world:
         class: '%bluebear.generator.world.class%'
         arguments:
-            - '@sidus_eav_model.family.world'
+            - '@sidus_eav_model.family_configuration.handler'
+            - '@sidus_eav_model.doctrine.repository.data'
