--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -1,5 +1,6 @@
 imports:
     - { resource: config.yml }
+    - { resource: '@SidusEAVModelBundle/Resources/config/annotation_generator.yml' }
 
 framework:
     router:
