--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,7 @@
         "tinymce/tinymce": "4.3.*",
 
         "fzaninotto/faker": "~1.6",
+        "a1essandro/perlin-noise": "~1.1",
 
         "cleverage/eav-manager": "dev-master",
 
