Better detailed map view + City creation

--- a/app/config/model/admin.yml
+++ b/app/config/model/admin.yml
@@ -31,6 +31,9 @@ sidus_admin:
                 areaMap:
                     path:     /{id}/{x},{y}
                     defaults: {family: World}
+                build:
+                    path:     /{id}/{x},{y}/build
+                    defaults: {family: World}
 
         configuration:
             controller: CleverAgeEAVManagerAdminBundle:Data
