--- a/app/config/model/bluebear/coordinate.yml
+++ b/app/config/model/bluebear/coordinate.yml
@@ -1,6 +1,7 @@
 sidus_eav_model:
     families:
-        Coordinate:
+        Coordinated:
+            instantiable: false
             attributeAsLabel: x
             attributes:
               - x
