--- a/app/config/model/eav_datagrid.yml
+++ b/app/config/model/eav_datagrid.yml
@@ -1,5 +1,35 @@
 sidus_eav_data_grid:
     configurations:
+        data:
+            family: World
+            filter_config:
+                sortable:
+                    - id
+                    - createdAt
+                    - updatedAt
+                fields: []
+            columns:
+                id:
+                    label: "#"
+                label:
+                    template: "CleverAgeEAVManagerAdminBundle:Base:clickable.column.html.twig"
+                createdAt: ~
+                updatedAt: ~
+                actions:
+                    template: "CleverAgeEAVManagerAdminBundle:Data:list.row.actions.html.twig"
+            actions:
+                create:
+                    form_type: admin_link
+                    label: admin.action.create.label
+                    action: create
+                    icon: plus
+                    attr:
+                        class: btn-primary
+                        data-target: tg_right
+            reset_button:
+                attr:
+                    data-target: tg_center
+
         # Configuration Example
         world:
             family: World
@@ -21,5 +51,21 @@ sidus_eav_data_grid:
                     template: "BlueBearWorldBrowserBundle:World:world.preview.html.twig"
                 climate: ~
                 resourceQuantities: ~
+                actions:
+                    template: "CleverAgeEAVManagerAdminBundle:Data:list.row.actions.html.twig"
+
+        city:
+            family: City
+            parent: data
+            filter_config:
+                sortable:
+                    - id
+                    - label
+                fields:
+                    label: ~
+            columns:
+                label:
+                    template: "CleverAgeEAVManagerAdminBundle:Base:clickable.column.html.twig"
+                world: ~
                 actions:
                     template: "CleverAgeEAVManagerAdminBundle:Data:list.row.actions.html.twig"
