--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,42 @@
-/app/bootstrap.php.cache
-/app/cache/*
-!app/cache/.gitkeep
 /app/config/parameters.yml
-/app/logs/*
-!app/logs/.gitkeep
-/app/phpunit.xml
-/bin/
-/composer.phar
+/build/
+/phpunit.xml
+/var/*
+!/var/cache
+/var/cache/*
+!var/cache/.gitkeep
+!/var/logs
+/var/logs/*
+!var/logs/.gitkeep
+!/var/sessions
+/var/sessions/*
+!var/sessions/.gitkeep
+!/var/data
+/var/data/*
+!var/SymfonyRequirements.php
 /vendor/
 /web/bundles/
+
+.idea/
+.sass-cache/
 /web/assets/
 /web/css/
 /web/js/
-/web/media/
-.sass-cache
-/app/data/*
-!app/data/.gitkeep
+/web/images/cache/
 
-/.idea
-/app/annotations/*
+/backups/*
+
+!/docker/data
+/docker/data/*
+!docker/data/.gitkeep
+!/docker/ssh
+/docker/ssh/*
+!docker/ssh/.gitkeep
+/docker/.env
+/docker/www/zsh_history
+
+.bundle
+!.bundle/config
+
+!.gitkeep
+
