--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -1,30 +1,25 @@
 imports:
     - { resource: config.yml }
 
-framework:
-    validation:
-        cache: validator.mapping.cache.apc
-    serializer:
-        cache: serializer.mapping.cache.apc
-
 doctrine:
     orm:
-        metadata_cache_driver: apc
-        result_cache_driver: apc
-        query_cache_driver: apc
-    dbal:
-        logging: false
-        profiling: false
+        metadata_cache_driver: apcu
+        result_cache_driver: apcu
+        query_cache_driver: apcu
 
 monolog:
     handlers:
         main:
-            type:         fingers_crossed
-            action_level: error
-            handler:      nested
-        nested:
-            type:  stream
-            path:  "%kernel.logs_dir%/%kernel.environment%.log"
+            type: fingers_crossed
+            action_level: warning
+            handler: file
+            channels: ['!translation', '!event']
+        file:
+            type: rotating_file
+            path: '%kernel.logs_dir%/%kernel.environment%.log'
+            max_files: 10
             level: debug
+            formatter: monolog.formatter.standard
         console:
-            type:  console
+            type: console
+            channels: ['!event', '!doctrine', '!cache', '!translation']
