--- a/composer.json
+++ b/composer.json
@@ -1,109 +1,110 @@
 {
     "name": "bluebear/model",
-    "license": "proprietary",
+    "license": "MIT",
     "type": "project",
     "autoload": {
         "psr-4": {
-            "": "src/",
-            "Sidus\\": "app/annotations/Sidus"
+            "": "src/"
         },
         "classmap": [
             "app/AppKernel.php",
             "app/AppCache.php"
         ]
     },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url":  "git@gitlab.com:VincentChalnot/eav-manager.git"
-        }
-    ],
     "require": {
-        "php": ">=5.3.9",
+        "php": ">=7.1",
         "ext-intl": "*",
-        "ext-pdo": "*",
-        "ext-pdo_mysql": "*",
-        "ext-mongo": "*",
-        "ext-mysql": "*",
-        "ext-curl": "*",
-        "ext-gd": "*",
-        "ext-apcu": "*",
-        "symfony/symfony": "2.8.*",
-        "doctrine/orm": "^2.4.8",
-        "doctrine/doctrine-bundle": "~1.4",
-        "symfony/assetic-bundle": "~2.3",
-        "symfony/swiftmailer-bundle": "~2.3",
-        "symfony/monolog-bundle": "~2.4",
-        "sensio/distribution-bundle": "~5.0",
+
+        "doctrine/doctrine-bundle": "^1.6",
+        "doctrine/orm": "^2.5",
+        "incenteev/composer-parameter-handler": "^2.0",
+        "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "~2.0",
+        "symfony/monolog-bundle": "^3.1.0",
+        "symfony/polyfill-apcu": "^1.0",
+        "symfony/swiftmailer-bundle": "^2.3.10",
+        "symfony/symfony": "3.4.*",
+        "twig/twig": "^2.0",
 
-        "friendsofsymfony/user-bundle": "~1.3.6",
-        "friendsofsymfony/jsrouting-bundle": "~1.5",
-        "liip/imagine-bundle": "1.5.*",
-        "exercise/htmlpurifier-bundle": "~0.2",
-        "tinymce/tinymce": "4.3.*",
+        "doctrine/doctrine-cache-bundle": "^1.2",
+        "tinymce/tinymce": "4.5.*",
+        "sidus/database-maintenance-bundle": "1.0.*",
+        "sidus/doctrine-debug-bundle": "1.*",
+        "phpseclib/phpseclib": "^2.0",
+        "twig/extensions": "1.5.*",
+        "doctrine/doctrine-migrations-bundle": "^1.2",
+        "smalot/bootstrap-datetimepicker": "^2.4",
 
-        "fzaninotto/faker": "~1.6",
-        "a1essandro/perlin-noise": "~1.1",
+        "cleverage/eav-manager": "dev-v1.3-dev",
+        "sidus/eav-model-bundle": "dev-v1.2.x-dev",
+        "sidus/eav-bootstrap-bundle": "dev-v1.2.x-dev",
+        "sidus/filter-bundle": "dev-v1.3-dev",
+        "sidus/eav-filter-bundle": "dev-v1.3-dev",
+        "sidus/datagrid-bundle": "dev-v1.3-dev",
+        "sidus/file-upload-bundle": "dev-v1.2.x-dev",
+        "sidus/admin-bundle": "dev-v1.3-dev",
+        "cleverage/process-bundle": "dev-master",
 
-        "cleverage/eav-manager": "dev-master",
-
-        "sidus/eav-model-bundle": "dev-master",
-        "sidus/eav-bootstrap-bundle": "dev-master",
-        "sidus/filter-bundle": "dev-master",
-        "sidus/eav-filter-bundle": "dev-master",
-        "sidus/datagrid-bundle": "dev-master",
-        "sidus/eav-datagrid-bundle": "dev-master",
-        "sidus/eav-variant-bundle": "dev-master",
-        "sidus/publishing-bundle": "dev-master",
-        "sidus/file-upload-bundle": "dev-master",
-        "sidus/admin-bundle": "dev-master"
+        "sidus/elastica-filter-bundle": "dev-master"
     },
     "require-dev": {
-        "nuovo/spreadsheet-reader": "0.5.11",
-        "doctrine/doctrine-fixtures-bundle": "2.3.*",
-        "sensio/generator-bundle": "~3.0",
-        "symfony/phpunit-bridge": "~2.7"
+        "nelmio/alice": "^3.0@beta",
+        "sensio/generator-bundle": "~3.0"
     },
+    "repositories": [
+        {
+            "type": "package",
+            "package": {
+                "name": "smalot/bootstrap-datetimepicker",
+                "version": "2.4.4",
+                "dist": {
+                    "url": "https://github.com/smalot/bootstrap-datetimepicker/archive/2.4.4.zip",
+                    "type": "zip"
+                },
+                "source": {
+                    "url": "https://github.com/smalot/bootstrap-datetimepicker.git",
+                    "type": "git",
+                    "reference": "tags/2.4.4"
+                }
+            }
+        }
+    ],
     "scripts": {
-        "post-install-cmd": [
+        "symfony-scripts": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
             "cp -r vendor/tinymce/tinymce vendor/stfalcon/tinymce-bundle/Stfalcon/Bundle/TinymceBundle/Resources/public/vendor",
+            "cp -r vendor/smalot/bootstrap-datetimepicker/* vendor/mopa/bootstrap-bundle/Mopa/Bundle/BootstrapBundle/Resources/public/components/smalot-bootstrap-datetimepicker",
             "Sidus\\FileUploadBundle\\Composer\\ScriptHandler::symlinkJQueryFileUpload",
+            "Mopa\\Bundle\\BootstrapBundle\\Composer\\ScriptHandler::postInstallSymlinkTwitterBootstrapSass",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget",
-            "Mopa\\Bundle\\BootstrapBundle\\Composer\\ScriptHandler::postInstallSymlinkTwitterBootstrapSass",
-            "php app/console assetic:dump"
+            "bin/console --env=prod doctrine:migrations:migrate --no-interaction"
+        ],
+        "post-install-cmd": [
+            "@symfony-scripts"
         ],
         "post-update-cmd": [
-            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-            "cp -r vendor/tinymce/tinymce vendor/stfalcon/tinymce-bundle/Stfalcon/Bundle/TinymceBundle/Resources/public/vendor",
-            "Sidus\\FileUploadBundle\\Composer\\ScriptHandler::symlinkJQueryFileUpload",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget",
-            "Mopa\\Bundle\\BootstrapBundle\\Composer\\ScriptHandler::postInstallSymlinkTwitterBootstrapSass",
-            "php app/console assetic:dump"
+            "@symfony-scripts"
         ]
     },
     "config": {
-        "bin-dir": "bin",
-        "platform": {
-            "php": "5.6.11"
-        },
         "component-dir": "web/assets",
-        "component-baseurl": "/assets"
+        "component-baseurl": "/assets",
+        "preferred-install": {
+            "cleverage/*": "source",
+            "sidus/*": "source"
+        },
+        "sort-packages": true
     },
     "extra": {
         "symfony-app-dir": "app",
+        "symfony-bin-dir": "bin",
+        "symfony-var-dir": "var",
         "symfony-web-dir": "web",
-        "symfony-assets-install": "symlink",
+        "symfony-assets-install": "relative",
         "incenteev-parameters": {
             "file": "app/config/parameters.yml"
         }
