--- a/app/config/model/bluebear/technology.yml
+++ b/app/config/model/bluebear/technology.yml
@@ -5,11 +5,10 @@ sidus_eav_model:
             attributeAsIdentifier: technologyCode
             attributes:
                 technologyCode:
-                    unique: true
-                    required: true
+                    type: string_identifier
 
                 requiredTechnologies:
-                    type: autocomplete_data
+                    type: autocomplete_data_selector
                     multiple: true
                     form_options:
                         family: Technology
@@ -19,7 +18,7 @@ sidus_eav_model:
                     required: true
 
                 unlockedCapacities:
-                    type: autocomplete_data
+                    type: autocomplete_data_selector
                     multiple: true
                     form_options:
                         family: Capacity
