--- a/app/config/admin/configuration.yml
+++ b/app/config/admin/configuration.yml
@@ -1,25 +1,28 @@
 sidus_admin:
-    fallback_template: CleverAgeEAVManagerAdminBundle:Base
     configurations:
         configuration:
-            controller: CleverAgeEAVManagerAdminBundle:Data
+            controller: '%eav.controller%'
             entity: '%sidus_data_class%'
             prefix: /configuration
-            default_form_type: sidus_tabbed_data
             actions:
                 index:
                     path:     /
                 list:
                     path:     /{familyCode}/list
+                read:
+                    path:     /{familyCode}/{id}/read
+                    form_type: '%eav_form.type%'
                 create:
                     path:     /{familyCode}/create
+                    form_type: '%eav_form.type%'
                 edit:
                     path:     /{familyCode}/{id}/edit
+                    form_type: '%eav_form.type%'
                 delete:
                     path:     /{familyCode}/{id}/delete
             options:
                 datagrid: data
                 families:
                     Climate: ~
-                    Resource: ~
+                    GameResource: ~
                     City: ~
