--- a/app/config/application/framework.yml
+++ b/app/config/application/framework.yml
@@ -16,11 +16,11 @@ framework:
     session:
         # http://symfony.com/doc/current/reference/configuration/framework.html#handler-id
         handler_id:  session.handler.native_file
-        save_path:   "%kernel.root_dir%/../var/sessions/%kernel.environment%"
+        save_path:   '%kernel.root_dir%/../var/sessions/%kernel.environment%'
     fragments: ~
     http_method_override: true
-    assets:
-        base_urls:
-            - '%router.static_host%'
+#    assets:
+#        base_urls:
+#            - '%router.static_host%'
     php_errors:
         log: true
