--- a/app/config/application/migration.yml
+++ b/app/config/application/migration.yml
@@ -1,5 +1,5 @@
 doctrine_migrations:
-    dir_name: "%kernel.root_dir%/DoctrineMigrations"
+    dir_name: '%kernel.root_dir%/DoctrineMigrations'
     namespace: BlueBear\Migrations
     table_name: migration_versions
     name: BlueBear Migrations
