--- a/app/config/model/bluebear/Player.yml
+++ b/app/config/model/bluebear/Player.yml
@@ -7,13 +7,13 @@ sidus_eav_model:
                     required: true
 
                 worlds:
-                    type: autocomplete_data
+                    type: autocomplete_data_selector
                     multiple: true
                     form_options:
                         family: World
 
                 technologies:
-                    type: autocomplete_data
+                    type: autocomplete_data_selector
                     multiple: true
                     form_options:
                         family: Technology
@@ -22,4 +22,4 @@ sidus_eav_model:
                     type: embed
                     multiple: true
                     form_options:
-                        family: ResourceQuantity
+                        family: GameResourceQuantity
