--- a/app/config/model/engine/Coordinated.yml
+++ b/app/config/model/engine/Coordinated.yml
@@ -11,6 +11,6 @@ sidus_eav_model:
                     type: integer
                     required: true
                 world:
-                    type: autocomplete_data
+                    type: autocomplete_data_selector
                     form_options:
                         family: World
