--- a/src/BlueBear/WorldBrowserBundle/Resources/config/services.yml
+++ b/src/BlueBear/WorldBrowserBundle/Resources/config/services.yml
@@ -1,16 +1,12 @@
-parameters:
-    bluebear.loader.world_map.class: BlueBear\WorldBrowserBundle\Loader\WorldMapLoader
-    bluebear.generator.world.class: BlueBear\WorldBrowserBundle\Generator\WorldGenerator
-
 services:
     bluebear.loader.world_map:
-        class: '%bluebear.loader.world_map.class%'
+        class: BlueBear\WorldBrowserBundle\Loader\WorldMapLoader
         arguments:
-            - '@sidus_eav_model.doctrine.repository.data'
-            - '@sidus_eav_model.family.coordinated'
+            - '@doctrine'
+            - '@sidus_eav_model.family.registry'
 
     bluebear.generator.world:
-        class: '%bluebear.generator.world.class%'
+        class: BlueBear\WorldBrowserBundle\Generator\WorldGenerator
         arguments:
-            - '@sidus_eav_model.family_configuration.handler'
-            - '@sidus_eav_model.doctrine.repository.data'
+            - '@doctrine'
+            - '@sidus_eav_model.family.registry'
