--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -3,9 +3,9 @@ imports:
 
 doctrine:
     orm:
-        metadata_cache_driver: apcu
-        result_cache_driver: apcu
-        query_cache_driver: apcu
+        metadata_cache_driver: array
+        result_cache_driver: array
+        query_cache_driver: array
 
 monolog:
     handlers:
