Commiting old work, no idea what is in there

--- a/src/BlueBear/WorldBrowserBundle/Resources/config/services.yml
+++ b/src/BlueBear/WorldBrowserBundle/Resources/config/services.yml
@@ -10,3 +10,8 @@ services:
         arguments:
             - '@doctrine'
             - '@sidus_eav_model.family.registry'
+
+    bluebear.twig.extension:
+        class: BlueBear\WorldBrowserBundle\Twig\WorldExtension
+        tags:
+            - { name: twig.extension }
