--- a/composer.json
+++ b/composer.json
@@ -36,15 +36,7 @@
         "smalot/bootstrap-datetimepicker": "^2.4",
         "a1essandro/perlin-noise": "~1.1",
 
-        "cleverage/eav-manager": "dev-v1.3-dev",
-        "sidus/eav-model-bundle": "dev-v1.2.x-dev",
-        "sidus/eav-bootstrap-bundle": "dev-v1.2.x-dev",
-        "sidus/filter-bundle": "dev-v1.3-dev",
-        "sidus/eav-filter-bundle": "dev-v1.3-dev",
-        "sidus/datagrid-bundle": "dev-v1.3-dev",
-        "sidus/file-upload-bundle": "dev-v1.2.x-dev",
-        "sidus/admin-bundle": "dev-v1.3-dev",
-        "cleverage/process-bundle": "dev-v1.1-dev as dev-master"
+        "cleverage/eav-manager": "2.1.*"
     },
     "require-dev": {
         "nelmio/alice": "^3.0@beta",
